Issue#12: Corrigido a lista numerada Changes: Colocado no CSS tamanho com width para a lista e alinhamento no centro com margin auto e texto a direita com text-align, e um espaco com padding entre a numeracao e o texto da lista

--- a/semana1/HTML-debug/index.css
+++ b/semana1/HTML-debug/index.css
@@ -88,7 +88,13 @@ div img {
 }
 
 #container-de-descricao > ol {
-  padding: 15px 0px;
+  padding: 15px 0;
+  width: 250px;
+  text-align: left;
+  margin: 0 auto;
+}
+#container-de-descricao > ol > li{
+  padding: 0 10px;
 }
 
 #container-para-comprar {
